# fazle-payroll-engine

./: .gitignore  README.md  pyproject.toml  sync-from-core.sh
fazle_payroll_engine/: accounting.py  employee.py  gap_scan.py  historical_sync.py  models.py  parser.py  reconcile.py  routes.py  workers.py
fazle_payroll_engine/migrations/: 001_fpe_schema.sql  002_fpe_normalization.sql  003_fpe_search_indexes.sql  004_fpe_zero_loss.sql  005_review_audit_logs.sql  006_fpe_income.sql
